--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="id"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tentang Saya - Qayzz</title>
+  <title>Tentang Saya - Qayzar</title>
   <style>
     body, html {
       margin: 0; padding: 0;
@@ -184,13 +184,13 @@
 
   <div id="content" tabindex="0" role="main" aria-label="Tentang Saya">
     <header>
-      <h1>Halo, Saya Qayzz</h1>
+      <h1>Halo, Saya Qayzar</h1>
       <p>Pelajar | Pengembang Bot WhatsApp | Web Enthusiast</p>
     </header>
 
     <section>
       <h2>Tentang Saya</h2>
-      <p>Nama saya Qayzz, seorang pelajar yang antusias dalam dunia pemrograman. Saat ini saya sedang fokus mempelajari pengembangan bot WhatsApp.</p>
+      <p>Nama saya Qayzar, seorang pelajar yang antusias dalam dunia pemrograman. Saat ini saya sedang fokus mempelajari pengembangan bot WhatsApp.</p>
     </section>
 
     <section>
@@ -207,9 +207,9 @@
     <section>
       <h2>Kontak Saya</h2>
       <ul>
-        <li>Email: Qayzz@example.com</li>
+        <li>Email: qyzzalwayzzhere@gmail.com</li>
         <li>GitHub: <a href="https://github.com/Qayzz-Newbie" target="_blank" rel="noopener noreferrer">github.com/Qayzz-Newbie</a></li>
-        <li>WhatsApp: <a href="https://wa.me/6281243825006" target="_blank" rel="noopener noreferrer">+62 821-4597-7922</a></li>
+        <li>WhatsApp: <a href="https://wa.me/6281243825006" target="_blank" rel="noopener noreferrer">+62-812-4382-5006</a></li>
         <li>Grup WhatsApp: <a href="https://chat.whatsapp.com/LCd7FzfriYcFCu0VuAZueR" target="_blank" rel="noopener noreferrer">Klik untuk Bergabung</a></li>
       </ul>
     </section>
@@ -234,7 +234,7 @@
     })
 
     document.getElementById('contactBtn').addEventListener('click', () => {
-      window.open('https://wa.me/6282145977922', '_blank')
+      window.open('https://wa.me/6281243825006', '_blank')
     })
   </script>
 
