--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     
     <div class="profile-card">
         <div class="profile-img-container">
-            <img src="https://telegra.ph/file/74bab785e18a9cfca7b2d-aec02cc632d56a7bb4.png" alt="QayzzNotPedo" class="profile-img">
+            <img src="https://files.catbox.moe/cfnmdq.jpg" alt="QayzzNotPedo" class="profile-img">
         </div>
         
         <h1 class="profile-name">Qayzz</h1>
