--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             <img src="https://files.catbox.moe/cfnmdq.jpg" alt="QayzzNotPedo" class="profile-img">
         </div>
         
-        <h1 class="profile-name">Qayzz || LearnCode</></h1>
+        <h1 class="profile-name">Qayzz</h1>
         <p class="profile-title">My Social :</p>
         
         <div class="social-links">
