--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             --whatsapp: #25D366;
             --youtube: #FF0000;
             --telegram: #0088cc;
-            --github: #333; /* GitHub color */
-            --discord: #7289DA; /* Discord color */
-            --instagram: #E1306C; /* Instagram color */
+            --github: #333;
+            --discord: #7289DA;
+            --instagram: #E1306C; 
             --neon-effect: 0 0 10px rgba(108, 92, 231, 0.8), 0 0 20px rgba(108, 92, 231, 0.6), 0 0 30px rgba(108, 92, 231, 0.4);
         }
         
